Modify grid layout and add new emoji buttons
Updated the grid layout to accommodate an additional column and added new buttons for additional emoji options.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   .cube {
     display: grid;
-    grid-template-columns: repeat(3, 80px);
+    grid-template-columns: repeat(4, 80px);
     gap: 12px;
     padding: 18px;
     background: #1a1d24;
@@ -65,6 +65,7 @@
 <div class="container">
 
   <div class="cube">
+    <!-- OLD -->
     <button onclick="emit('💀')">💀</button>
     <button onclick="emit('🗣')">🗣</button>
     <button onclick="emit('🥀')">🥀</button>
@@ -73,6 +74,15 @@
     <button onclick="emit('😑')">😑</button>
     <button onclick="emit('🤨')">🤨</button>
     <button onclick="emit('🤔')">🤔</button>
+
+    <!-- NEW -->
+    <button onclick="emit('✅')">✅</button>
+    <button onclick="emit('❌')">❌</button>
+    <button onclick="emit('❤️‍🩹')">❤️‍🩹</button>
+    <button onclick="emit('💔')">💔</button>
+    <button onclick="emit('♾️')">♾️</button>
+    <button onclick="emit('🫡')">🫡</button>
+    <button onclick="emit('🧐')">🧐</button>
     <button onclick="emit('✨')">✨</button>
   </div>
 
